welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
	if (d==10 || e==10 || f==10) {return true}
                                             ^blueTicket:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
	else if ((d-10)==e || (d-10)==f) {return true}
                                                 ^blueTicket:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
	else return false
                    ^