welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
	var d:Int = a+b
	var e:Int = b+c
	var f:Int = c+a
	if (d==10 || e==10 || f==10) {return true}
	else if ((d-10)==e || (d-10)==f) {return true}
	else return false
}
